--- a/indicators.html
+++ b/indicators.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Technical Indicators — Leo Legacy Trading</title>
   <link rel="stylesheet" href="styles.css">
-<script src="js/main.js"></script>
+<script src="main.js"></script>
 </head>
 <body>
 <div class="page">
