--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Leo Legacy Trading — Home</title>
+  
+  <!-- Loads CSS (works because file is in root) -->
   <link rel="stylesheet" href="styles.css">
-<script src="main.js"></script>
+
+  <!-- Loads JS from root instead of /js -->
+  <script src="main.js" defer></script>
 </head>
 <body>
 <div class="page">
