--- a/risk-management.html
+++ b/risk-management.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Leo Legacy Trading — Home</title>
-  
+  <title>Risk Management — Leo Legacy Trading</title>
+
   <!-- Loads CSS (works because file is in root) -->
   <link rel="stylesheet" href="styles.css">
 
-  <!-- Loads JS from root instead of /js -->
-  <script src="main.js" defer></script>
+<!-- Loads JS from root instead of /js -->
+<script src="main.js"></script>
 </head>
 <body>
 <div class="page">
