--- a/indicators.html
+++ b/indicators.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Technical Indicators — Leo Legacy Trading</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="js/main.js" defer></script>
+  
+  <!-- Loads CSS (works because file is in root) -->
+  <link rel="stylesheet" href="styles.css">
+
+<!-- Loads JS from root instead of /js -->
+<script src="main.js"></script>
 </head>
 <body>
 <div class="page">
