--- a/references.html
+++ b/references.html
@@ -88,7 +88,7 @@
         </div>
       </article>
       <article class="card" style="margin-top:1.2rem;">
-        <h2>Works Cited (MLA Format)</h2>
+        <h2>Works Cited</h2>
         <ul>
           <li>Brooks, Al. <em>Reading Price Charts Bar by Bar</em>. Wiley Trading, 2009.</li>
           <li>“Risk Management.” <em>Investopedia</em>, IAC Publishing, https://www.investopedia.com/terms/r/riskmanagement.asp.</li>
