--- a/quiz.html
+++ b/quiz.html
@@ -94,6 +94,26 @@
           <button id="submit-btn" type="button" class="btn primary">Submit Quiz</button>
           <button id="reset-btn" type="button" class="btn ghost">Reset</button>
         </div>
+        <div class="quiz-question">
+  <h3>Q6 – Trading Psychology</h3>
+  <div class="quiz-options">
+    <p>Which behavior is an example of emotional trading?</p>
+    <label><input type="radio" name="q6" value="A"> Always risking 1% per trade</label>
+    <label><input type="radio" name="q6" value="B"> Following a written trading plan</label>
+    <label><input type="radio" name="q6" value="C"> Entering a trade because of FOMO after a big move</label>
+    <label><input type="radio" name="q6" value="D"> Journaling each trade at the end of the day</label>
+  </div>
+</div>
+<div class="quiz-question">
+  <h3>Q7 – Trend Identification</h3>
+  <div class="quiz-options">
+    <p>Which price pattern best describes an uptrend?</p>
+    <label><input type="radio" name="q7" value="A"> Higher highs and higher lows</label>
+    <label><input type="radio" name="q7" value="B"> Lower highs and lower lows</label>
+    <label><input type="radio" name="q7" value="C"> Price moving sideways in a tight range</label>
+    <label><input type="radio" name="q7" value="D"> A single large candle in one direction</label>
+  </div>
+</div>
       </form>
       <section id="results" aria-live="polite" style="margin-top:1rem;"></section>
     </section>
