--- a/about.html
+++ b/about.html
@@ -55,6 +55,12 @@
             I am an Army National Guard soldier and IT student who is passionate about finance,
             entrepreneurship, and building systems that create long-term wealth.
           </p>
+          <p>
+  LegacyTrades Academy is a student-built trading education website designed to help beginners
+  understand technical analysis, discipline, and risk-managed trading. It reflects my journey as a
+  developing trader and IT student, not professional financial advice.
+</p>
+
         </article>
         <article class="card">
           <h2>Mission Statement</h2>
