--- a/about.html
+++ b/about.html
@@ -1,4 +1,23 @@
 <!DOCTYPE html>
+<!-- ==========================================================
+   Project Note - Known Limitations
+   Nubia Leo | Course: IT 3203 Web Development
+
+   • All main pages load and navigation works, but the "Chart Example" 
+     image on the homepage does not display on mobile — likely due to 
+     file path formatting or iOS rendering issue.
+   • Website is responsive, but some layout spacing may compress 
+     at very small screen widths on certain phones.
+   • Future improvements planned:
+        - Replace placeholder chart with a real TradingView embed
+        - Add hover animations to cards and buttons
+        - Expand content pages with more trading examples & visuals
+        - Improve accessibility labels (alt text, aria tags)
+
+   This comment is included to show awareness of UX issues and areas 
+   for future improvement, demonstrating learning and iterative design.
+========================================================== -->
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
