--- a/risk-management.html
+++ b/risk-management.html
@@ -1,4 +1,28 @@
 <!DOCTYPE html>
+<!-- ==========================================================
+   LegacyTrades Academy — Web Development Project (Milestone 3)
+   Nubia Leo
+   IT 3203 — Prof. Tucker
+   12/08/25
+   Purpose:
+   This page is part of a student-designed educational website created
+   to teach beginner traders about technical analysis, discipline,
+   psychology, indicators, and risk-managed execution.
+
+   Notes:
+   • Fully functional navigation linking across 7+ pages
+   • Responsive layout tested on desktop, tablet, and mobile
+   • Color theme + brand identity implemented using custom CSS
+
+   Known Improvements for Future Updates:
+   • Add more real chart examples + screenshots for visual learning
+   • Improve mobile menu animation + accessibility labels
+   • Add more research references and trading examples
+   • Enhance UI with hover effects and transitions
+
+   This project demonstrates HTML/CSS/JS usage, responsive design,
+   content organization, and web deployment through GitHub Pages.
+========================================================== -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
