--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <!-- ==========================================================
-   Project Note - Known Limitations / Work in Progress (Student Log)
-   Author: Nubia Leo | Course: IT 3203 Web Development
+   LegacyTrades Academy — Web Development Project (Milestone 3)
+   Nubia Leo
+   IT 3203 — Prof. Tucker
+   12/08/25
+   Purpose:
+   This page is part of a student-designed educational website created
+   to teach beginner traders about technical analysis, discipline,
+   psychology, indicators, and risk-managed execution.
 
-   • All main pages load and navigation works, but the "Chart Example" 
-     image on the homepage does not display on mobile — likely due to 
-     file path formatting or iOS rendering issue.
-   • Website is responsive, but some layout spacing may compress 
-     at very small screen widths on certain phones.
-   • Future improvements planned:
-        - Replace placeholder chart with a real TradingView embed
-        - Add hover animations to cards and buttons
-        - Expand content pages with more trading examples & visuals
-        - Improve accessibility labels (alt text, aria tags)
+   Notes:
+   • Fully functional navigation linking across 7+ pages
+   • Responsive layout tested on desktop, tablet, and mobile
+   • Color theme + brand identity implemented using custom CSS
 
-   This comment is included to show awareness of UX issues and areas 
-   for future improvement, demonstrating learning and iterative design.
+   Known Improvements for Future Updates:
+   • Add more real chart examples + screenshots for visual learning
+   • Improve mobile menu animation + accessibility labels
+   • Add more research references and trading examples
+   • Enhance UI with hover effects and transitions
+
+   This project demonstrates HTML/CSS/JS usage, responsive design,
+   content organization, and web deployment through GitHub Pages.
 ========================================================== -->
 <html lang="en">
 <head>
